# kern

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: common.h.25CCAD2914E2A079.idx  error.c.4DAC98863303968D.idx  error.h.2948A0E9CF5F0A3C.idx  error.h.E08B6D3AE1ED3502.idx  kern.h.B551430B79F09557.idx  main.c.7E0435F032A17BAB.idx  main.c.BD17722A228E1552.idx  memory_pool.c.8129F7ACF8C10FA0.idx  memory_pool.h.91D13AE666BAF521.idx  memory_pool.h.BF436CD642F7FF3B.idx  memory_pool.h.E8FF75631BBBBCA0.idx  state.c.D85B053256A348EE.idx  state.h.745B0CD98C087D8D.idx  state.h.F3B7DA50EBC813BC.idx  types.h.5AC4E5E7F6A87242.idx
demo/: main.c  main.cpp
docs/: kern.fdb_latexmk  kern.fls  kern.tex
engine/controls/: controls.cpp  input_handler.cpp
engine/core/: configuration.cpp  context.cpp  engine.cpp  game.cpp  properties.cpp  timing.cpp
engine/exception/: exception.cpp
engine/gfx/: camera.cpp  layer.cpp  renderer.cpp
engine/gl/: frame_buffer.cpp  mesh.cpp  resource_manager.cpp  shader.cpp  texture.cpp
engine/logging/: logging.cpp
engine/mesh/: builtin.cpp  obj.cpp
engine/platform/: window.cpp
engine/rendering/: gpu_mesh.cpp  mesh.cpp  render_world.cpp  renderer.cpp  resource_manager.cpp  shader_program.cpp
engine/scene/: camera.cpp  render_world.cpp
engine/util/: fs.cpp  util.cpp
include/kern/: _internal.hpp  common.h  gl.hpp  kern.h  kern.hpp  version.hpp
include/kern/controls/: controls.hpp  input_handler.hpp  key.hpp
include/kern/core/: configuration.hpp  context.hpp  engine.hpp  game.hpp  properties.hpp  timing.hpp
include/kern/error/: error.h
include/kern/exception/: exception.hpp
include/kern/gfx/: camera.hpp  handles.hpp  layer.hpp  material.hpp  mesh.hpp  renderer.hpp  uniform.hpp
include/kern/gl/: frame_buffer.hpp  mesh.hpp  resource_container.hpp  resource_manager.hpp  shader.hpp  texture.hpp
include/kern/logging/: logging.hpp
include/kern/math/: math.hpp
include/kern/memory/: memory_pool.h
include/kern/mesh/: geometry.hpp  obj.hpp
include/kern/platform/: window.hpp
include/kern/rendering/: camera.hpp  gpu_mesh.hpp  handles.hpp  mesh.hpp  render_object.hpp  render_world.hpp  renderer.hpp  resource_manager.hpp  shader_program.hpp
include/kern/scene/: camera.hpp  mesh_instance.hpp  scene.hpp
include/kern/state/: state.h
include/kern/types/: error.h  memory_pool.h  state.h  types.h  types.hpp  window.h
include/kern/util/: access_key.hpp  container_utils.hpp  fs.hpp  token.hpp  traits.hpp  util.hpp
include/kern/window/: window.h
kern/: kern.h
kern/core/: CMakeLists.txt  core.c  core.h
kern/core/app/: app.h
kern/core/error/: error.c  error.h
kern/display/: CMakeLists.txt
kern/display/monitor/: monitor.c  monitor.h
kern/display/window/: window.c  window.h
kern/error/: CMakeLists.txt  error.c  error.h
kern/monitor/: CMakeLists.txt  monitor.c  monitor.h
kern/window/: CMakeLists.txt  window.c  window.h
logo/: kern_logo.ai
private/internal/state/: state.h
private/internal/window/: window.h
src/error/: error.c
src/mm/: memory_pool.c
src/state/: state.c
src/window/: window.c
test/: main.c
window/: CMakeLists.txt  window.c  window.h
